tests/snapshots/snapshots__insert_dialog_after_nl_parse_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 FILTERS                   ▶▮◀ /tmp/tuxedo-snapshot.txt  •  15 tas DETAIL                           
                                                                                                    
 PROJECTS                  (2)  PRIORITY A  ────────────────────── priority  (A)                    
   +work             4      1 ▸ (A) Finish Q2 board deck +work @la created   2026-05-01             
   +health           3      2   (A) Call dentist to reschedule cle due       2026-05-06  today      
   +finance          2     (3)  PRIORITY B  ────────────────────── projects  +work                  
   +home             1      3   (B) Review pull requests for auth  contexts  @laptop                
   +learning         1      4   (B) Renew passport before summer t                                  
   +personal         1      5   (B) Draft hiring rubric for senior RAW                              
   +travel           1     (2)  PRIORITY C  ──────────────────────                                  
                            6   (C) Pay quarterly estimated taxes  (A) 2026-05-01 Finish Q2 board   
 CONTEXTS                   7   (C) Order new running shoes +healt deck +work @laptop               
   @errand╭──────────────────────────────────────────────────────────────────────────────╮          
   @home  │                                                                              │          
   @laptop│  > Pay rent  +home   @bank  ▦ due:2026-06-01 ↻ rec:+1m ◐ t:-3d▏        ↑     │          
   @phone │                                                                              │          
          │    ▦ mon 1 jun      ◷      ↻ every month     + home     @ bank      ⚑        │          
          │                                                                              │          
          ╰──────────────────────────────────────────────────────────────────────────────╯          
                           14       Plan Saturday hike with K. @ph                                  
                           15       Replace bathroom faucet washer                                  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
 NORMAL · parsed natural language; press Enter to save   h/l 15 open · 2026-05-06 · tuxedo 2026.8.1
